Can now add new colortypes without exceptions